--- a/src/app/modules/weight/weight.component.html
+++ b/src/app/modules/weight/weight.component.html
@@ -1,3 +1,13 @@
-<p>
-  weight works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <app-weight-goal-form (goalSaved)="saveGoal($event)"></app-weight-goal-form>
+    </div>
+    <div class="col-md-6">
+      <app-weight-upsert-form></app-weight-upsert-form>
+    </div>
+    <div class="col-md-6">
+      <app-weight-progress></app-weight-progress>
+    </div>
+  </div>
+</div>
