Added first solution for progress estimation feature
- Added a few unit tests regarding weight progress component
- Added calculation methods
- Added a few comments
- Added display of goal estimation
* TODO: Cleanup code and refactor

--- a/src/app/modules/weight/components/weight-progress/weight-progress.component.html
+++ b/src/app/modules/weight/components/weight-progress/weight-progress.component.html
@@ -5,6 +5,8 @@
     <div class="progress-bar progress-bar-striped progress-bar-animated"
       role="progressbar" [style.width.%]="remaining.percent"></div>
   </div>
+
+  <div class="h4">Time it will take to reach goal: <b>{{requiredForGoal}}</b></div>
 </ng-container>
 </div>
 <ng-container *ngIf="weight$ | async as weights">
