[app] - use added components
footer, header & main components added to module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Dialog Assesment (FE)</h1>
+<app-header class="navbar navbar-expand-md navbar-dark bg-dark"></app-header>
+
+<app-main class="flex-shrink-0"></app-main>
+
+<app-footer class="mt-auto bg-light"></app-footer>
