--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,42 @@
 <header>
+  <nav class="container-fluid">
+    <a class="navbar-brand" href="/">Dialog</a>
+    <a class="navbar-toggler" href="#nav" data-bs-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </a>
+    <div class="navbar-collapse collapse" id="nav">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Default</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
 
+          <div class="dropdown-menu">
+            <a class="dropdown-item active" href="#">Active</a>
+            <a class="dropdown-item" href="#">Default</a>
+          </div>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Default</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+
+          <div class="dropdown-menu">
+            <a class="dropdown-item active" href="#">Active</a>
+            <a class="dropdown-item" href="#">Default</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </header>
