--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,10 @@
 <header>
   <nav class="container-fluid">
+    <a class="navbar-brand p-0" href="/" title="Dialog">
+      <svg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 1364 486'>
+        <path fill='#fff' d='M51 0h179.3q119.2 0 178.3 63.8t47 178.8q-12 115.2-84.6 179.2T179.2 486H0Zm151.6 348q109.2 0 121-111.5 11.6-111-97.6-111h-61.1l-23.4 222.4-5.4 51.6 36.3-51.6Z'/>
+      </svg>
+    </a>
     <a class="navbar-brand" href="/">Dialog</a>
     <a class="navbar-toggler" href="#nav" data-bs-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
