--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,12 @@
 <main class="container">
   <h1 class="my-3">Dialog Assesment (FE)</h1>
+
+  <div class="row">
+    <div class="col-sm-8">
+      <div>My progress</div>
+      <div class="progress my-3" role="progressbar" aria-label="Your progress" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width:0%"></div>
+      </div>
+    </div>
+  </div>
 </main>
