--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,5 +8,14 @@
         <div class="progress-bar" style="width:0%"></div>
       </div>
     </div>
+
+    <form class="col-sm-4" autocomplete="off">
+      <fieldset>
+        <div class="mb-3">
+          <label class="form-label" for="goalId">My goal (kg)</label>
+          <input class="form-control" type="number" step=".01" min="1" max="" id="goalId" name="goal" placeholder="I will reach it!">
+        </div>
+      </fieldset>
+    </form>
   </div>
 </main>
