--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,6 @@
 <main class="container">
   <h1 class="my-3">Dialog Assesment (FE)</h1>
+  <h2 class="my-3">Weighty ;)</h2>
 
   <div class="row">
     <div class="col-sm-8">
