code opdracht finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>Dialog Assesment (FE)</h1>
+<div class="navbar navbar-expand-leg bg-body-tertiary d-flex justify-content-center">
+    <div class="container-fluid justify-content-around bg-dark p-3">
+        <a class="navbar-brand text-white" routerLink="/" routerLinkActive="active">Home</a> 
+        <a class="navbar-brand text-white" routerLink="/gewicht" routerLinkActive="active">Gewicht</a> 
+        <a class="navbar-brand text-white" routerLink="/overzicht" routerLinkActive="active">Overzicht</a>  
+    </div>
+    <div class="p-4">
+     <router-outlet></router-outlet>   
+    </div>
+</div>  
+
