--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div>
   <app-header></app-header>
+  <div *ngIf="!targetWeight; else main">
+    <app-initial-screen></app-initial-screen>
+  </div>
+  <ng-template #main>
+    <router-outlet></router-outlet>
+  </ng-template>
 </div>
