--- a/src/app/features/weight-editor/components/weight-edit-view/weight-edit-view.component.html
+++ b/src/app/features/weight-editor/components/weight-edit-view/weight-edit-view.component.html
@@ -1,14 +1,14 @@
 <form id="weight-edit-form" class="p-4 d-flex flex-column" (submit)="onValueSave()">
   <div class="mb-3">
     <label for="weight-input" class="form-label">{{inputTitle}}</label>
-    <input type="number" step="0.1" class="form-control" id="weight-input" placeholder="Enter number" [value]="initialValue" (input)="onInputChange($event)">
+    <input type="number" step="0.1" class="form-control" id="weight-input" placeholder="Enter number" [value]="value" (input)="onInputChange($event)">
   </div>
   <div class="mb-3">
     <label for="weight-description-textarea" class="form-label">Description</label>
     <textarea class="form-control" id="weight-description-textarea" rows="3" maxlength="200" [value]="description" (input)="onDescriptionChange($event)"></textarea>
   </div>
   <div class="d-flex flex-row">
-    <button type="submit" class="w-50" [disabled]="value === initialValue || !value">Save</button>
+    <button type="submit" class="w-50" [disabled]="!isRecordUpdated">Save</button>
     <ng-container *ngIf="id">
       <button type="button" class="w-50 ms-2" (click)="handleCancelClick()">Cancel</button>
     </ng-container>
