feat: added main functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>Dialog Assesment (FE)</h1>
+<!-- app.component.html -->
+<app-weight-entry></app-weight-entry>
+<app-goal-setting></app-goal-setting>
+<app-weight-history></app-weight-history>
