--- a/src/app/weight-entry/weight-entry.component.html
+++ b/src/app/weight-entry/weight-entry.component.html
@@ -1,13 +1,13 @@
 <!-- weight-entry.component.html -->
 <h2>Add a new weight entry</h2>
-<form (ngSubmit)="addWeightEntry()">
-  <label>
-    Weight:
-    <input [(ngModel)]="weight" name="weight" type="number" required placeholder="Weight in KG" />
-  </label>
-  <label>
-    Description:
-    <input [(ngModel)]="description" name="description" type="text" />
-  </label>
-  <button type="submit">Add Entry</button>
+<form (ngSubmit)="addWeightEntry()" class="form">
+  <div class="mb-3">
+    <label class="form-label">Weight:</label>
+    <input [(ngModel)]="weight" name="weight" type="number" required placeholder="Weight in KG" class="form-control" />
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Description:</label>
+    <input [(ngModel)]="description" name="description" type="text" class="form-control" />
+  </div>
+  <button type="submit" class="btn btn-primary">Add Entry</button>
 </form>
