--- a/src/app/weight-history/weight-history.component.html
+++ b/src/app/weight-history/weight-history.component.html
@@ -1,15 +1,16 @@
 <!-- weight-history.component.html -->
-<table>
+<h2>Weight History</h2>
+<table class="table">
   <thead>
     <tr>
       <th>Date</th>
-      <th>Weight</th>
+      <th>Weight (KG)</th>
       <th>Description</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let entry of weightService.weightEntries">
-      <td>{{ entry.date | date }}</td>
+      <td>{{ entry.date | date: 'shortDate' }}</td>
       <td>{{ entry.weight }}</td>
       <td>{{ entry.description }}</td>
     </tr>
