--- a/src/app/weight-history/weight-history.component.html
+++ b/src/app/weight-history/weight-history.component.html
@@ -1,10 +1,9 @@
-<!-- weight-history.component.html -->
 <h2>Weight History</h2>
 <table class="table">
   <thead>
     <tr>
       <th>Date</th>
-      <th>Weight (KG)</th>
+      <th>Weight ({{ unit }})</th>
       <th>Description</th>
     </tr>
   </thead>
