feat: Weight Chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!-- app.component.html -->
+
 <app-unit-switcher></app-unit-switcher>
 <app-weight-entry></app-weight-entry>
 <app-goal-setting></app-goal-setting>
 <app-weight-history></app-weight-history>
+<app-weight-chart></app-weight-chart>
