--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Dialog Assesment (FE)</h1>
+<div class="header row">
+    <h1>Dialog Assessment (FE)</h1>
+</div>
+<div class="content">
+    <app-dashboard></app-dashboard>
+</div>
