added weight entry form

--- a/src/app/routes/components/dashboard/dashboard.component.html
+++ b/src/app/routes/components/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-Dashboard
+<div class="row">
+  <div class="col-md-6">
+    <app-card title="Set Your Goal Weight"> </app-card>
+  </div>
+  <div class="col-md-6">
+    <app-card title="Update Your Weight"><app-entry></app-entry></app-card>
+  </div>
+</div>
